--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.data.redis.port=${REDISPORT}
 spring.data.redis.username=${REDISUSER}
 spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.client-type=jedis
+
+# $env:REDISHOST='localhost'
+# $env:REDISPORT='8080'
+# $env:REDISUSER=' ' 
+# $env:REDISPASSWORD=' '
