--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.data.redis.client-type=jedis
 day18.pizza.api.url=http://localhost:8080/order/
 
 # $env:REDISHOST='localhost'
-# $env: '
+# $env:REDISPORT='8080'
 # $env:REDISUSER=' ' 
 # $env:REDISPASSWORD=' '
