--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.data.redis.host=${REDISHOST}
-spring.data.redis.port=${REDISPORT}
-spring.data.redis.username=${REDISUSER}
-spring.data.redis.password=${REDISPASSWORD}
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.username= 
+spring.data.redis.password= 
 spring.data.redis.client-type=jedis
 day18.pizza.api.url=http://localhost:8080/order/
 
 # $env:REDISHOST='localhost'
-# $env:REDISPORT='8080'
+# $env:REDISPORT='6379'
 # $env:REDISUSER=' '
 # $env:REDISPASSWORD=' '
